api/hale/HaleParser.py
# Generated from Hale.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class HaleParser ( Parser ):

    grammarFileName = "Hale.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'def'", "<INVALID>", "'::='", 
                     "'.'", "'\u03BB'", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'", "'('", "')'", "'**'", "'<'", "'<='", "'>'", 
                     "'>='", "'=='", "','", "<INVALID>", "'\"'", "'?'", 
                     "':'", "'='", "';'", "'|'", "'&'", "'^'", "'~'", "'!'", 
                     "'['", "']'", "'{'", "'}'", "'$'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "DEF", "TYPE", "DEFEQ", "FULLSTOP", 
                      "LAMBDA", "INT", "PLUS", "MINUS", "MULT", "DIV", "LPAR", 
                      "RPAR", "POW", "LT", "LTE", "GT", "GTE", "CEQ", "COMMA", 
                      "ID", "DQUOTE", "QUESTION", "COLON", "EQ", "SEMICOLON", 
                      "OR", "AND", "XOR", "NOT", "LNOT", "LBR", "RBR", "LCBR", 
                      "RCBR", "DOLLAR", "STRING", "COMMENT", "WS" ]

    RULE_statements = 0
    RULE_statement = 1
    RULE_simplestmt = 2
    RULE_funcdef = 3
    RULE_assign = 4
    RULE_expr = 5
    RULE_conditional = 6
    RULE_comp = 7
    RULE_boolean = 8
    RULE_sumsub = 9
    RULE_multdiv = 10
    RULE_exp = 11
    RULE_atom = 12
    RULE_params = 13
    RULE_lst = 14
    RULE_value = 15

    ruleNames =  [ "statements", "statement", "simplestmt", "funcdef", "assign", 
                   "expr", "conditional", "comp", "boolean", "sumsub", "multdiv", 
                   "exp", "atom", "params", "lst", "value" ]

    EOF = Token.EOF
    BOOL=1
    DEF=2
    TYPE=3
    DEFEQ=4
    FULLSTOP=5
    LAMBDA=6
    INT=7
    PLUS=8
    MINUS=9
    MULT=10
    DIV=11
    LPAR=12
    RPAR=13
    POW=14
    LT=15
    LTE=16
    GT=17
    GTE=18
    CEQ=19
    COMMA=20
    ID=21
    DQUOTE=22
    QUESTION=23
    COLON=24
    EQ=25
    SEMICOLON=26
    OR=27
    AND=28
    XOR=29
    NOT=30
    LNOT=31
    LBR=32
    RBR=33
    LCBR=34
    RCBR=35
    DOLLAR=36
    STRING=37
    COMMENT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.StatementContext)
            else:
                return self.getTypedRuleContext(HaleParser.StatementContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.SEMICOLON)
            else:
                return self.getToken(HaleParser.SEMICOLON, i)

        def getRuleIndex(self):
            return HaleParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = HaleParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True: #while there remain unparsed tokens 
                self.state = 32
                self.statement() #the statement function is where the hale code is parsed as either a simple statement or a function definition
                self.state = 33
                self.match(HaleParser.SEMICOLON) #end of either func def or simple statement
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HaleParser.BOOL) | (1 << HaleParser.DEF) | (1 << HaleParser.INT) | (1 << HaleParser.LPAR) | (1 << HaleParser.ID) | (1 << HaleParser.NOT) | (1 << HaleParser.LNOT) | (1 << HaleParser.LBR) | (1 << HaleParser.LCBR) | (1 << HaleParser.STRING))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simplestmt(self):
            return self.getTypedRuleContext(HaleParser.SimplestmtContext,0)


        def funcdef(self):
            return self.getTypedRuleContext(HaleParser.FuncdefContext,0)


        def getRuleIndex(self):
            return HaleParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = HaleParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HaleParser.BOOL, HaleParser.INT, HaleParser.LPAR, HaleParser.ID, HaleParser.NOT, HaleParser.LNOT, HaleParser.LBR, HaleParser.LCBR, HaleParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.simplestmt()
                pass
            elif token in [HaleParser.DEF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.funcdef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimplestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(HaleParser.ExprContext,0)


        def assign(self):
            return self.getTypedRuleContext(HaleParser.AssignContext,0)


        def LCBR(self):
            return self.getToken(HaleParser.LCBR, 0)

        def simplestmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.SimplestmtContext)
            else:
                return self.getTypedRuleContext(HaleParser.SimplestmtContext,i)


        def RCBR(self):
            return self.getToken(HaleParser.RCBR, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.SEMICOLON)
            else:
                return self.getToken(HaleParser.SEMICOLON, i)

        def getRuleIndex(self):
            return HaleParser.RULE_simplestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimplestmt" ):
                listener.enterSimplestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimplestmt" ):
                listener.exitSimplestmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimplestmt" ):
                return visitor.visitSimplestmt(self)
            else:
                return visitor.visitChildren(self)




    def simplestmt(self):

        localctx = HaleParser.SimplestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simplestmt)
        self._la = 0 # Token type
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.assign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.match(HaleParser.LCBR)
                self.state = 46
                self.simplestmt()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HaleParser.SEMICOLON:
                    self.state = 47
                    self.match(HaleParser.SEMICOLON)
                    self.state = 48
                    self.simplestmt()
                    self.state = 53
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 54
                self.match(HaleParser.RCBR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(HaleParser.DEF, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.ID)
            else:
                return self.getToken(HaleParser.ID, i)

        def DEFEQ(self):
            return self.getToken(HaleParser.DEFEQ, 0)

        def LAMBDA(self):
            return self.getToken(HaleParser.LAMBDA, 0)

        def COLON(self):
            return self.getToken(HaleParser.COLON, 0)

        def TYPE(self):
            return self.getToken(HaleParser.TYPE, 0)

        def FULLSTOP(self):
            return self.getToken(HaleParser.FULLSTOP, 0)

        def simplestmt(self):
            return self.getTypedRuleContext(HaleParser.SimplestmtContext,0)


        def getRuleIndex(self):
            return HaleParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = HaleParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(HaleParser.DEF)
            self.state = 59
            self.match(HaleParser.ID)
            self.state = 60
            self.match(HaleParser.DEFEQ)
            self.state = 61
            self.match(HaleParser.LAMBDA)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HaleParser.ID:
                self.state = 62
                self.match(HaleParser.ID)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HaleParser.ID:
                    self.state = 63
                    self.match(HaleParser.ID)
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 71
            self.match(HaleParser.COLON)
            self.state = 72
            self.match(HaleParser.TYPE)
            self.state = 73
            self.match(HaleParser.FULLSTOP)
            self.state = 74
            self.simplestmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.ID)
            else:
                return self.getToken(HaleParser.ID, i)

        def EQ(self):
            return self.getToken(HaleParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(HaleParser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.COMMA)
            else:
                return self.getToken(HaleParser.COMMA, i)

        def getRuleIndex(self):
            return HaleParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = HaleParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(HaleParser.ID)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HaleParser.COMMA:
                self.state = 77
                self.match(HaleParser.COMMA)
                self.state = 78
                self.match(HaleParser.ID)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(HaleParser.EQ)
            self.state = 85
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comp(self):
            return self.getTypedRuleContext(HaleParser.CompContext,0)


        def conditional(self):
            return self.getTypedRuleContext(HaleParser.ConditionalContext,0)


        def getRuleIndex(self):
            return HaleParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = HaleParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expr)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.comp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.conditional()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # CompContext
            self.ifcase = None # SimplestmtContext
            self.elsecase = None # SimplestmtContext

        def QUESTION(self):
            return self.getToken(HaleParser.QUESTION, 0)

        def COLON(self):
            return self.getToken(HaleParser.COLON, 0)

        def comp(self):
            return self.getTypedRuleContext(HaleParser.CompContext,0)


        def simplestmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.SimplestmtContext)
            else:
                return self.getTypedRuleContext(HaleParser.SimplestmtContext,i)


        def getRuleIndex(self):
            return HaleParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = HaleParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            localctx.condition = self.comp()
            self.state = 92
            self.match(HaleParser.QUESTION)
            self.state = 93
            localctx.ifcase = self.simplestmt()
            self.state = 94
            self.match(HaleParser.COLON)
            self.state = 95
            localctx.elsecase = self.simplestmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.right = None # BooleanContext
            self.op = None # Token
            self.left = None # BooleanContext

        def boolean(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.BooleanContext)
            else:
                return self.getTypedRuleContext(HaleParser.BooleanContext,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.LT)
            else:
                return self.getToken(HaleParser.LT, i)

        def LTE(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.LTE)
            else:
                return self.getToken(HaleParser.LTE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.GT)
            else:
                return self.getToken(HaleParser.GT, i)

        def GTE(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.GTE)
            else:
                return self.getToken(HaleParser.GTE, i)

        def CEQ(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.CEQ)
            else:
                return self.getToken(HaleParser.CEQ, i)

        def getRuleIndex(self):
            return HaleParser.RULE_comp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp" ):
                listener.enterComp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp" ):
                listener.exitComp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp" ):
                return visitor.visitComp(self)
            else:
                return visitor.visitChildren(self)




    def comp(self):

        localctx = HaleParser.CompContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            localctx.right = self.boolean()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HaleParser.LT) | (1 << HaleParser.LTE) | (1 << HaleParser.GT) | (1 << HaleParser.GTE) | (1 << HaleParser.CEQ))) != 0):
                self.state = 98
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HaleParser.LT) | (1 << HaleParser.LTE) | (1 << HaleParser.GT) | (1 << HaleParser.GTE) | (1 << HaleParser.CEQ))) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99
                localctx.left = self.boolean()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.right = None # SumsubContext
            self.op = None # Token

        def sumsub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.SumsubContext)
            else:
                return self.getTypedRuleContext(HaleParser.SumsubContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.OR)
            else:
                return self.getToken(HaleParser.OR, i)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.AND)
            else:
                return self.getToken(HaleParser.AND, i)

        def XOR(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.XOR)
            else:
                return self.getToken(HaleParser.XOR, i)

        def NOT(self):
            return self.getToken(HaleParser.NOT, 0)

        def LNOT(self):
            return self.getToken(HaleParser.LNOT, 0)

        def getRuleIndex(self):
            return HaleParser.RULE_boolean

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean" ):
                listener.enterBoolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean" ):
                listener.exitBoolean(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)




    def boolean(self):

        localctx = HaleParser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_boolean)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HaleParser.BOOL, HaleParser.INT, HaleParser.LPAR, HaleParser.ID, HaleParser.LBR, HaleParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                localctx.right = self.sumsub()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HaleParser.OR) | (1 << HaleParser.AND) | (1 << HaleParser.XOR))) != 0):
                    self.state = 106
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HaleParser.OR) | (1 << HaleParser.AND) | (1 << HaleParser.XOR))) != 0)):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 107
                    self.sumsub()
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [HaleParser.NOT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(HaleParser.NOT)
                self.state = 114
                self.sumsub()
                pass
            elif token in [HaleParser.LNOT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(HaleParser.LNOT)
                self.state = 116
                self.sumsub()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SumsubContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.right = None # MultdivContext
            self.op = None # Token
            self.left = None # MultdivContext

        def multdiv(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.MultdivContext)
            else:
                return self.getTypedRuleContext(HaleParser.MultdivContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.PLUS)
            else:
                return self.getToken(HaleParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.MINUS)
            else:
                return self.getToken(HaleParser.MINUS, i)

        def getRuleIndex(self):
            return HaleParser.RULE_sumsub

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumsub" ):
                listener.enterSumsub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumsub" ):
                listener.exitSumsub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumsub" ):
                return visitor.visitSumsub(self)
            else:
                return visitor.visitChildren(self)




    def sumsub(self):

        localctx = HaleParser.SumsubContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sumsub)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            localctx.right = self.multdiv()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HaleParser.PLUS or _la==HaleParser.MINUS:
                self.state = 120
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==HaleParser.PLUS or _la==HaleParser.MINUS):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 121
                localctx.left = self.multdiv()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultdivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.right = None # ExpContext
            self.op = None # Token
            self.left = None # ExpContext

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.ExpContext)
            else:
                return self.getTypedRuleContext(HaleParser.ExpContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.MULT)
            else:
                return self.getToken(HaleParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(HaleParser.DIV)
            else:
                return self.getToken(HaleParser.DIV, i)

        def getRuleIndex(self):
            return HaleParser.RULE_multdiv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultdiv" ):
                listener.enterMultdiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultdiv" ):
                listener.exitMultdiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultdiv" ):
                return visitor.visitMultdiv(self)
            else:
                return visitor.visitChildren(self)




    def multdiv(self):

        localctx = HaleParser.MultdivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_multdiv)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            localctx.right = self.exp()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HaleParser.MULT or _la==HaleParser.DIV:
                self.state = 128
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==HaleParser.MULT or _la==HaleParser.DIV):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 129
                localctx.left = self.exp()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.right = None # AtomContext
            self.left = None # AtomContext

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HaleParser.AtomContext)
            else:
                return self.getTypedRuleContext(HaleParser.AtomContext,i)


        def POW(self):
            return self.getToken(HaleParser.POW, 0)

        def getRuleIndex(self):
            return HaleParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = HaleParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            localctx.right = self.atom()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HaleParser.POW:
                self.state = 136
                self.match(HaleParser.POW)
                self.state = 137
                localctx.left = self.atom()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

